public/css/main.css
/******************
 *    Algemeen    *
******************/

html, body {margin: 0; padding: 0; font-family: 'Raleway', sans-serif; }
body a:hover { text-decoration: none;}
body .container { padding-bottom: 50px; }

*[class^='col-'] { padding-left: 0; padding-right: 0;}

/*.container { padding-bottom: 100px;}*/

#main-container { height: 100%; position: relative}

/*****************
 *    Helpers    *
*****************/
/*.red { color: #CC0000}*/
.red { color: darkgrey;}
.green { color: green}
.five-fans { width: 20%;}
.fan-off { font-size: 25px; text-align: center; margin-top: 150px; }

/*************
 *  Includes *
 *************/
.fan-count { border: 20px solid grey; }
.fan-order { width: 15px; height: 15px; background: white; float: left; margin-right: 10px; margin-top: -5px; }
.colored { background: #444;}


/*********************
 *  Header en Footer *
 *********************/

header { width: 100%; height: 75px; background: #f8f8f8; margin-bottom: 50px; border-bottom: 5px solid #18933C;}
header .back-button { float: left; width: 30px; padding-top: 25px; }
header .back-button img { height: 18px; }
header #logo { margin-left: 60px; }
header #logo h1 { font-variant: small-caps; color: #777; font-size: 25px;}

footer { width: 100%; height: 50px; background: #f8f8f8; position: fixed; bottom: 0; margin-top: 50px; border-top: 5px solid #18933C }
footer p { color: #777; font-variant: small-caps; font-size: 15px; margin-top: 10px;}



/*******************
 *    Homepage     *
 *******************/
.dataset-block { width: 360px; height: 180px; background: lightgrey; margin: 20px 20px 20px 20px; transition: background 0.5s ease; overflow: hidden}
.dataset-block a { text-decoration: none; color: black}
.dataset-block-image { margin: 60px 0 0 -60px;}
.dataset-block-image img { width: 175px; height: 175px; opacity: 0.3; transition: height 0.5s ease, width 0.5s ease;}
.dataset-block-name { padding-top: 55px;}
.dataset-block-name h3 { margin-left: 40px; transition: font-size 0.5s ease;}

.dataset-block:hover { cursor: pointer; background: #e2e2e2 }
.dataset-block:hover .dataset-block-image img { width: 180px; height: 180px; }
.dataset-block:hover h3 { font-size: 26px; }


/*12:47*/
/*Detailpagina cluster maken: 13:50 begonnen*/

/************************************
 *    Ventilator - Tunnelbuizen     *
 ************************************/
.tunnel_tubes h1{ text-align: center; padding-bottom: 20px;}

.tunnel_tube { height: 200px; background: lightgray;  border-left: 150px solid darkgrey; border-right: 150px solid darkgrey;  margin: 0 auto 50px;
}
.tunnel_tube a { text-decoration: none; color: black}

.tunnel_tube h1 { padding-top: 80px;}
.tunnel_tube h3 { font-size: 24px;}
.tunnel_tube a:first-child h3 { float: left; margin-left: -135px; margin-top: 90px;}
.tunnel_tube a:last-child h3  { float: right; margin-right: -125px; margin-top: -60px; }

.tunnel_tube p { font-size: 16px; text-align: center; line-height: 0;}


/************************************
 *    Ventilator - Detailpagina     *
 ************************************/
#segment { margin-bottom: 100px;}
#segment h1, #segment h3 {  text-align: center}
#segment h1 { font-size: 50px;}

.fan[data-index='4'] { border-right: 1px solid lightgray}

.fan-information-basic { border-top: 1px solid lightgrey; border-left: 1px solid lightgrey; height: 380px; background: linear-gradient(to bottom ,#f7f7f7, #dfdfdf); }
.fan-information-basic:hover { cursor: pointer; background: rgba(0,0,0,0.06)}
.fan-information-basic h2 { text-align: center; font-size: 20px;  padding-top: 20px; font-variant: small-caps;}

.fan h1, .fan p { text-align: center;}

.fan p { font-size: 20px}
.fan h1.fan-name { font-family: Rubik, sans-serif; font-variant: small-caps; font-size: 26px;}
.fan p.fan-status { padding-top: 12px; font-size: 36px; line-height: 0; margin-bottom: 30px;}
.fan p.fan-time-on { font-family: Hind, sans-serif; padding-top: 15px; font-size: 30px; line-height: 0;}

.fan .arrow-squiggly-up { transform: rotate(90deg);display: inline-block; font-size: 45px; margin: -10px -5px; }
.fan .arrow-squiggly-down { transform: rotate(270deg); display: inline-block; font-size: 45px; margin: -10px -5px; }
.fan .arrow-straight-up { transform: rotate(0deg); display: inline-block; font-size: 35px; margin: -5px 0; }
.fan .arrow-straight-down { transform: rotate(180deg);display: inline-block; font-size: 35px; margin: -5px 0; }


.fan hr { border-top: 1px solid lightgrey; margin: 10px 20px 0 20px;}
.fan hr:nth-child(3) { display: none }

.fan-information-technical { background: #f7f7f7; height: 650px; width: 100%; padding: 50px; display: none; float:left; clear:both;}
.fan-information-technical h1 { text-align: center; font-family: Rubik, sans-serif; font-variant: small-caps}

.fan-technical-keys { text-align: left}
.fan-technical-values { text-align: right}
.fan-technical-keys, .fan-technical-values { font-size: 16px;}
.fan-technical-keys p { font-weight: bold}

.filter-buttons { float: right; margin-top: 20px; width: 100%; }
.filter-buttons > div { background: #dfdfdf; border: 1px solid lightgray; width: 25%; height: 50px; float: left; }
.filter-buttons > div:hover { cursor: pointer; background: lightgray;}
.filter-buttons > div p { text-align: center; padding-top: 10px; font-variant: small-caps; font-family: Rubik, sans-serif; font-size: 15px; line-height: 15px; }

#technical-graph { padding: 50px; float: right; width: 82%; height: 400px; margin-top: 110px;}
#fan-graph {height: 500px; margin-bottom: 100px; float:left; width: 88%;}

.fan .fan-blowing-direction { text-align: center;}
.fan-blowing-direction i { font-size: 25px;}
.fan-blowing-direction p { margin-top: 10px;}

#fan-graph-container { top: 100px; position:relative; clear:both; }

#fan-graph-legend { clear: both; margin-top: 15px; padding: 20px; background: #f7f7f7; float:right; width: 125px; height: 452px;}

#fan-graph-legend .legendColorBox > div { border: none !important; margin-top: 20px;}
#fan-graph-legend .legendColorBox > div div { border-width: 8px !important;}
#fan-graph-legend .legendLabel { text-decoration: none; padding: 30px 20px 0 5px; font-family: Rubik, sans-serif}
#fan-graph-legend .legendLabel:nth-child(1) { padding-left: 20px;}
#fan-graph-legend .legendLabel a { color: black;}
#fan-graph-legend .legendLabel:hover a { color: darkgrey;}

/*.fan-technical-keys p { margin-left: 30px; }*/
.fan-technical-values p { margin-right: 30px; }
.fa-info-circle { float: right; margin-top: 15px;}
.fa-info-circle:first-of-type { margin-top: 5px;}
.fa-info-circle:hover { cursor: pointer;}

/************************************
 *    Media queries - Detailpagina     *
 ************************************/

/*iPad -- Landscape*/
@media only screen
and (min-device-width : 768px)
and (max-device-width : 1024px)
and (orientation : landscape) {

    header .back-button { padding-top: 5px; padding-left: 20px;}

    .fan-information-technical h1 { margin-right: 125px; padding-bottom: 25px;}

    #technical-graph { width: 100%;}
    #fan-graph {width: 85%;}
    #fan-graph-legend { width: 140px;}


}

/*iPad -- Portrait*/
@media only screen
and (min-device-width : 768px)
and (max-device-width : 1024px)
and (orientation : portrait) {

    header .back-button { padding-top: 5px; padding-left: 20px;}

    .fan-information-basic { height: 320px;}
    .fan-information-basic h1.fan-name { font-size: 20px;}
    .fan-information-basic h2 { margin-top: 0;}
    .fan-information-technical { padding: 50px 20px 50px 20px; }
    .fan-information-technical h1 { padding-bottom: 25px;}

    .five-fans { margin: 0 auto;}

    .fan-status { margin-bottom: 0;}

    .fan .arrow-squiggly-down { margin: -5px; font-size: 30px;}

    #technical-graph { width: 100%; }
    #fan-graph {width: 82%;}

    .fan-technical-keys, .fan-technical-values { font-size: 15px;}

    .axisLabels { display: none;}
    #technical-graph.fan-off { font-size: 18px;}



}

/*iPhone */
@media only screen
and (min-device-width: 320px)
and (max-device-width: 640px)
and (-webkit-min-device-pixel-ratio: 2) {

    header { margin-bottom: 10px;}
    header .back-button { padding-top: 5px; padding-left: 20px;}

    .dataset-block { width: 320px;}

    .tunnel_tubes .tunnel_tube { height: 150px; border-left: 100px solid darkgrey; border-right: 100px solid darkgrey; }
    .tunnel_tube a:first-child h3 { margin-left: -92px; margin-top: 70px; }
    .tunnel_tube a:last-child h3 { margin-right: -85px; margin-top: -50px;}
    .tunnel_tube h3 { font-size: 16px; }
    .tunnel_tube h1 { font-size: 16px; padding-top: 70px;}

    #segment { margin-bottom: 30px;}
    #segment h1 { font-size: 30px; margin: 0;}
    #segment hr { margin: 0 30px 0 30px;}
    #segment h3 { font-size: 14px; }

    .fan h1.fan-name { font-size: 12px;}
    .fan hr { margin: 10px 10px 0 10px;}
    .fan hr:nth-child(3) { display: block }


    .fan-information-basic { height: 250px; border-bottom: 1px solid lightgrey; }
    .fan .fan-information-basic h2 { padding-top: 0;}
    .fan .fan-information-basic h2.fan-status-heading { padding-top: 0; font-size: 15px; margin-bottom: 5px;}
    .fan .fan-information-basic h2.fan-direction-heading { font-size: 12px; margin-top: 10px; }

    .fan p.fan-status { font-size: 25px; margin-bottom: 20px;}

    .fan .arrow-squiggly-down { font-size: 23px;}
    .fan .fan-blowing-direction p:last-child { font-size: 10px; margin-top: 0;}
    .fan .fan-information-basic .expand-fan-button { margin: 10px auto !important; font-size: 15px !important; width: 15px !important; float: none !important;}

    /******************/

    .fan-information-technical { height: 1070px; padding: 0}
    .fan-information-technical h1 { font-size: 25px; margin: 30px 0 20px 0; }
    .fan-information-technical-details { padding: 20px 50px 50px 50px;}

    .fan-power-usage p:first-child, .fan-theoretical-life-expectancy p:first-child{ font-size: 11px;}
    .fan-power-usage p:last-child, .fan-theoretical-life-expectancy p:last-child { font-size: 16px;}

    /*#technical-graph { width: 350px; margin-top: 30px; float: right;}*/

    /*#fan-graph { height: 200px; width: 100%}*/
    #fan-graph-container { top: 20px; }
    #fan-graph-legend { float: none; width: 100%; height: auto; margin-top: 15px;}
    #fan-graph-legend .legendLabel { padding: 0; }
    #fan-graph-legend tr { float: left; width: 50%; }
    #fan-graph-legend tr:nth-child(1) { margin-top: 20px; }
    #fan-graph-legend tr:not(:nth-child(1)) { padding-bottom: 20px; margin-top: 25px;}
    #fan-graph-legend .legendColorBox > div { margin-top: 0; padding-right: 10px !important; }
    #footer p { margin-left: 20px;}

}

@media only screen
and (min-device-width: 320px)
and (max-device-width: 640px)
and (orientation: landscape) {
    .tunnel_tube { margin: 0 auto 20px;}
    .tunnel_tubes .tunnel_tube { height: 100px; }
    .tunnel_tube h1 { padding-top: 40px; }
    .tunnel_tube a:first-child h3 { margin-top: 45px;}
    .tunnel_tube a:last-child h3 { margin-top: -45px;}


    #fan-graph { height: 350px; width: 100%;}
    #technical-graph { width: 100%; height: 250px;}
    .fan-information-technical { height: 970px; }


}

@media only screen
and (min-device-width: 320px)
and (max-device-width: 640px)
and (orientation: portrait) {

    #fan-graph { height: 250px; width: 100%; }
    #technical-graph { width: 100%; height: 250px; }
    .fan-information-technical { height: 990px; }


}

